--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@kitchen-list/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "serve":"nx run-many --parallel --target=serve --configuration=development --projects=kitchen-list-frontend,kitchen-list-backend",
+    "build": "nx run-many --parallel --target=buld --configuration=production --projects=kitchen-list-frontend,kitchen-list-backend"
+  },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
@@ -10,7 +13,9 @@
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
@@ -22,6 +27,8 @@
     "@nx/js": "19.8.2",
     "@nx/nest": "19.8.2",
     "@nx/node": "19.8.2",
+    "@nx/vite": "19.8.2",
+    "@nx/vue": "19.8.2",
     "@nx/web": "19.8.2",
     "@nx/webpack": "19.8.2",
     "@nx/workspace": "19.8.2",
@@ -30,17 +37,29 @@
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "@vitest/coverage-v8": "^1.0.4",
+    "@vitest/ui": "^1.3.1",
+    "@vue/eslint-config-prettier": "7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-vue": "^9.16.1",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
+    "jsdom": "~22.1.0",
     "nx": "19.8.2",
     "prettier": "^2.6.2",
+    "sass": "1.62.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.3.1",
+    "vue-tsc": "^2.0.0",
     "webpack-cli": "^5.1.4"
   }
 }
