--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "serve":"nx run-many --parallel --target=serve --configuration=development --projects=kitchen-list-frontend,kitchen-list-backend",
-    "build": "nx run-many --parallel --target=buld --configuration=production --projects=kitchen-list-frontend,kitchen-list-backend"
+    "build": "nx run-many --parallel=false --target=build --configuration=production --projects=kitchen-list-frontend,kitchen-list-backend",
+    "test":"nx run-many --parallel=false --target=test --projects=kitchen-list-frontend,kitchen-list-backend"
   },
   "private": true,
   "dependencies": {
