--- a/package.json
+++ b/package.json
@@ -3,17 +3,20 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "serve":"nx run-many --parallel --target=serve --configuration=development --projects=kitchen-list-frontend,kitchen-list-backend",
+    "serve": "nx run-many --parallel --target=serve --configuration=development --projects=kitchen-list-frontend,kitchen-list-backend",
     "build": "nx run-many --parallel=false --target=build --configuration=production --projects=kitchen-list-frontend,kitchen-list-backend",
-    "test":"nx run-many --parallel=false --target=test --projects=kitchen-list-frontend,kitchen-list-backend",
+    "test": "nx run-many --parallel=false --target=test --projects=kitchen-list-frontend,kitchen-list-backend",
     "start": "node main.js"
   },
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "vue": "^3.3.4",
@@ -42,8 +45,6 @@
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
-    "@vue/eslint-config-prettier": "7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
