--- a/.github/workflows/buld.yml
+++ b/.github/workflows/buld.yml
@@ -6,6 +6,7 @@ on:
       - main
 env:
   REGISTRY: ghcr.io
+  NODE_VER: 20.17.0
 
 jobs:
   build-node:
@@ -21,6 +22,13 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Use Node.js ${{env.NODE_VER}}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{env.NODE_VER}}
+          cache: 'npm'
+      - run: npm ci
+      - run: npm run build
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
         with:
