--- a/.github/workflows/buld.yml
+++ b/.github/workflows/buld.yml
@@ -9,16 +9,9 @@ env:
   NODE_VER: 20.17.0
 
 jobs:
-  build-node:
+  build-app:
+    name: Build app
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - image: ghcr.io/${{ github.repository }}-backend
-            target: finalnode
-          - image: ghcr.io/${{ github.repository }}-frontend
-            target: finalnginx
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -29,6 +22,29 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run build
+      - name: Upload Build app result
+        uses: actions/upload-artifact@v4
+        with:
+          name: buld_res
+          path: .
+  build-and-push-docker:
+    name: build and push to registry
+    needs: build-app
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - image: ghcr.io/${{ github.repository }}-backend
+            file: /apps/kitchen-list-backend/Dockerfile
+          - image: ghcr.io/${{ github.repository }}-frontend
+            file: /apps/kitchen-list-frontend/Dockerfile
+        
+    steps:
+      - name: Download build
+        uses: actions/download-artifact@v4
+        with:
+          name: buld_res
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
         with:
@@ -46,7 +62,7 @@ jobs:
         uses: docker/build-push-action@v5.3.0
         with:
           context: .
-          target: ${{matrix.target}}
+          file: ${{matrix.file}}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
