--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,15 +7,18 @@ on:
   pull_request:
     branches: ['main']
 
+env:
+  NODE_VER: 20.17.0    
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 20.17.0
+      - name: Use Node.js ${{env.NODE_VER}}
         uses: actions/setup-node@v4
         with:
-          node-version: 20.17.0
+          node-version: ${{env.NODE_VER}}
           cache: 'npm'
       - run: npm ci
       - run: npm run build --if-present
