--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,10 @@ services:
         - postgres-vol:/var/lib/postgresql/data:Z
       ports:
         - '5432:5432'
+  redis:
+    image: redis:latest
+    ports:
+      - '6379:6379'      
   nginx:
     image: ghcr.io/mmxzmax/kitchen-shopping-list-frontend:main
     ports:
@@ -37,6 +41,7 @@ services:
       retries: 10
     depends_on:
       - db  
+      - redis
   pgadmin:
     image: dpage/pgadmin4
     restart: always
