--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
+    "connect-redis": "^7.1.1",
+    "express-session": "^1.18.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "vue": "^3.3.4",
@@ -40,8 +45,13 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bcrypt": "^5.0.2",
+    "@types/connect-redis": "^0.0.23",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@types/passport-local": "^1.0.38",
+    "@types/redis": "^4.0.10",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
