--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -1,19 +1,22 @@
 services:
   db:
-      image: postgres
-      restart: always
-      environment:
-        - POSTGRES_PASSWORD=${DB_PASSWORD}
-      container_name: postgres
-      volumes:
-        - postgres-vol:/var/lib/postgresql/data:Z
-      ports:
-        - '5432:5432'
+    image: postgres
+    restart: always
+    environment:
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+    container_name: postgres
+    volumes:
+      - postgres-vol:/var/lib/postgresql/data:Z
+    ports:
+      - '5432:5432'
   redis:
     image: redis:latest
-    command: ["redis-server", "--bind", "redis", "--port", "6379"]     
+    command: ["redis-server", "--bind", "redis", "--port", "6379"]
   nginx:
-    image: ghcr.io/mmxzmax/kitchen-shopping-list-frontend:main
+    build:
+      context: .
+      dockerfile: apps/kitchen-list-frontend/Dockerfile
+    image: ngnix
     ports:
       - '80:80'
     restart: always
@@ -27,35 +30,37 @@ services:
       - LETSENCRYPT_EMAIL=${ADMIN_EMAIL}
 
   node:
-    image: ghcr.io/mmxzmax/kitchen-shopping-list-backend:main
+    build:
+      context: .
+      dockerfile: apps/kitchen-list-backend/Dockerfile
+    image: node
     ports:
       - '3000:3000'
     restart: always
-    environment:
-      - PORT=3000
     healthcheck:
       test: wget --no-verbose --tries=10 --spider http://localhost:3000/api/healthcheck || exit 1
       timeout: 3s
       interval: 3s
       retries: 10
     depends_on:
-      - db  
       - redis
+      - db
   node2:
-    image: ghcr.io/mmxzmax/kitchen-shopping-list-backend:main
+    build:
+       context: .
+       dockerfile: apps/kitchen-list-backend/Dockerfile
+    image: node2
     ports:
       - '3001:3000'
     restart: always
-    environment:
-      - PORT=3000
     healthcheck:
-      test: wget --no-verbose --tries=10 --spider http://localhost:3001/api/healthcheck || exit 1
+      test: wget --no-verbose --tries=10 --spider http://localhost:3000/api/healthcheck || exit 1
       timeout: 3s
       interval: 3s
       retries: 10
     depends_on:
-      - db  
-      - redis    
+      - redis
+      - db
   pgadmin:
     image: dpage/pgadmin4
     restart: always
@@ -66,6 +71,6 @@ services:
     ports:
       - '5050:80'
     depends_on:
-      - db    
+      - db
 volumes:
-  postgres-vol:                   
+  postgres-vol:
