--- a/docker/nginx/conf.conf
+++ b/docker/nginx/conf.conf
@@ -1,3 +1,9 @@
+upstream app{
+      server node:3000;
+      server node:3001;
+   }
+
+
 server {
     listen 80;
     root   /usr/share/nginx/html;
@@ -11,10 +17,12 @@ server {
     }
 
     location /api {
+        proxy_pass http://app;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://node:3000;
+        proxy_redirect off;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 }
