--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,7 +8,7 @@ services:
       volumes:
         - postgres-vol:/var/lib/postgresql/data:Z
       ports:
-        - '5432:5432'
+        - '${DB_PORT}:5432'
   redis:
     image: redis:latest
     ports:
