--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.2",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^10.0.2",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
@@ -21,9 +23,11 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "postgresql": "^0.0.1",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
+    "typeorm": "^0.3.20",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
