--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@primevue/themes": "^4.1.0",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
@@ -23,7 +24,9 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "postgresql": "^0.0.1",
+    "pg": "^8.13.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.1.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
