--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "@vue/test-utils": "^2.4.1",
+    "better-sqlite3": "^9.6.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.16.1",
