--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,6 @@ services:
     restart: always
     depends_on:
       - node
-      - node2
     environment:
       - VIRTUAL_HOST=${DOMAIN}
       - VIRTUAL_PORT=80
@@ -42,6 +41,7 @@ services:
       - REDIS_SECRET=${REDIS_SECRET}
       - REDIS_URL=${REDIS_URL}
       - DB_NAME=${DB_NAME}
+      - TG_BOT_KEY=${TG_BOT_KEY}
     healthcheck:
       test: wget --no-verbose --tries=10 --spider http://localhost:3000/api/healthcheck || exit 1
       timeout: 3s
@@ -50,30 +50,6 @@ services:
     depends_on:
       - db  
       - redis
-  node2:
-    image: ghcr.io/mmxzmax/kitchen-shopping-list-backend:main
-    ports:
-      - '3001:3000'
-    restart: always
-    environment:
-      - PORT=3000
-      - DB_PASSWORD=${DB_PASSWORD}
-      - ADMIN_EMAIL=${ADMIN_EMAIL}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
-      - DB_PORT=${DB_PORT}
-      - DB_HOST=${DB_HOST}
-      - DB_USERNAME=${DB_USERNAME}
-      - REDIS_SECRET=${REDIS_SECRET}
-      - REDIS_URL=${REDIS_URL}
-      - DB_NAME=${DB_NAME}
-    healthcheck:
-      test: wget --no-verbose --tries=10 --spider http://localhost:3001/api/healthcheck || exit 1
-      timeout: 3s
-      interval: 3s
-      retries: 10
-    depends_on:
-      - db  
-      - redis    
   pgadmin:
     image: dpage/pgadmin4
     restart: always
