--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "serve-fr": "nx run kitchen-list-frontend:serve",
-    "serve-bc":"nx run kitchen-list-backend:serve",
+    "serve-bc": "nx run kitchen-list-backend:serve",
     "serve": "nx run-many --parallel --target=serve --configuration=development --projects=kitchen-list-frontend,kitchen-list-backend",
     "build": "nx run-many --parallel=false --target=build --configuration=production --projects=kitchen-list-frontend,kitchen-list-backend",
     "test": "nx run-many --parallel=false --target=test --projects=kitchen-list-frontend,kitchen-list-backend",
@@ -23,6 +23,7 @@
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
     "express-session": "^1.18.0",
+    "node-telegram-bot-api": "^0.66.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -59,6 +60,7 @@
     "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.12",
     "@types/node": "~18.16.9",
+    "@types/node-telegram-bot-api": "^0.64.7",
     "@types/passport-local": "^1.0.38",
     "@types/redis": "^4.0.10",
     "@vitejs/plugin-vue": "^4.5.0",
